@@ -1976,6 +1976,16 @@ script, gently reparent, hsd:sl, hsd:newparent, begin
   set slice screen y(hsd:sl, hsd:oldy)
 end
 
+script, lookup parent, hsd:code, hsd:sl, begin
+  variable(hsd:par)
+  hsd:par := slice parent(hsd:sl)
+  while(hsd:par) do(
+    if(get slice lookup(hsd:par) == hsd:code) then(exit(hsd:par))
+    hsd:par := slice parent(hsd:par)
+  )
+  exit(0)
+end
+
 #--------------------------------------------------------------------------
 # helper scripts
 
